try fixing mix-blend-mode on ios

--- a/assets/style.css
+++ b/assets/style.css
@@ -111,3 +111,7 @@ hr {
     opacity: 1;
     text-decoration: none;
 }
+
+#__layout > div {
+    isolation: isolate;
+}
